--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "bundle/repeat"]
 	path = bundle/repeat
 	url = git://github.com/tpope/vim-repeat.git
+[submodule "unimpaired"]
+	path = unimpaired
+	url = git://github.com/tpope/vim-unimpaired.git
