--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "bundle/ack"]
 	path = bundle/ack
 	url = https://github.com/mileszs/ack.vim
+[submodule "/home/crypticswarm/.vim/bundle/vim-javascript"]
+	path = /home/crypticswarm/.vim/bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript.git
