Add vim-rhubarb plugin
vim-rhubarb is a plugin for fugitive. Fugitive no longer offers the
Gbrowse provides the github specific Gbrowse functionality, and instead
delegates to various plugins to provide the specific linking generation.
Rhubarb provides github based Gbrowse functionality.

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "bundle/table-mode"]
 	path = bundle/table-mode
 	url = git@github.com:dhruvasagar/vim-table-mode.git
+[submodule "bundle/vim-rhubarb"]
+	path = bundle/vim-rhubarb
+	url = git@github.com:tpope/vim-rhubarb.git
