--- a/.gitmodules
+++ b/.gitmodules
@@ -30,7 +30,7 @@
 	url = git://github.com/tpope/vim-surround.git
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
-	url = git://github.com/tpope/vim-fugitive.git
+	url = git@github.com:tpope/vim-fugitive.git
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim
